--- a/Cajero Automatico/Cajerito.html
+++ b/Cajero Automatico/Cajerito.html
@@ -9,7 +9,7 @@
         body
         {
             background-color: white;
-            color:rgb(0, 0, 0);
+            color:black;
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
         }
         strong
@@ -19,15 +19,14 @@
     </style>
 </head>
 <body>
-    <h1>Welcome to Automated teller machine (ATM)</h1>
     <p>
         <img src="cajero.gif" />
     </p>
     <p>
-        <input type="number" id="cash">
-        <input type="button" value="extract"
+        <input type="number" id="cash" />
+        <input type="button" value="extract" id="extraer"/>
     </p>
-    
+    <p id="resultado"></p>
     <script src="Automatico.js"></script>
 </body>
 </html>
